localization 4th batch

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -104,16 +104,6 @@
     "first_choose_complain" : "اولا اختر المنطقه",
     "add_complains" : "الاعراض الاخرى",
 
-
-   
-"symptoms" : "=========================================",
-
-
-
-
-
-
-
 "chronic_diseases" : "=======================================",
     "cd_HTN" : "Elevated Blood Pressure",
     "cd_DM" : "Diabetus Mellitus",
@@ -129,5 +119,287 @@
     "cd_lung" : "Chronic Lung Disease",
     "cd_copd" : "COPD",
     "cd_ashma" : "Ashma",
-    "cd_tumor" : "Malignancy"
+    "cd_tumor" : "Malignancy",
+   
+"cardioresp" : "=========================================",
+    "hemoptysis":"بلغم دموي",
+    "orthopnea":"ضيق التنفس اثناء النوم بشكل افقي",
+    "PN dyspnea":"ضيق التنفس اثناء النوم ليلا",
+    "palpitation":"خفقان",
+    "chest pain":"الم الصدر",
+    "cough":"سعال|كحة",
+    "sputum":"بلغم",
+    "dyspnea":"صعوبة التنفس",
+    "cyanosis":"ازرقاق الفم و اللسان",
+    "other cardiac problems":"مشاكل قلبية اخرى",
+    "wheeze":"ازيز|صوت صفير اثناء التنفس",
+    "other respiratory problems":"مشاكل تنفسية اخرى",
+
+ "GIT and abdomen" : "=========================================",
+    "abdominal pain":"الم البطن",
+    "vomiting":"التقيؤ",
+    "constipation":"الامساك اكثر من 3 ايام",
+    "bloody diarrhea":"اسهال دموي",
+    "watery diarrhea":"اسهال خالي من الدم",
+    "dysphagia":"صعوبة البلع",
+    "odynophagia":"الم اثناء البلع",
+    "mucousy diarrhea":"اسهال مخاطي|يحتوي مادة مخاطية",
+    "tenesmus":"شعور بامتلاء المخرج",
+    "other git problems":"مشاكل هضمية اخرى",
+    "abdominal distension":"انتفاخ البطن",
+    "bleeding per rectum":"نزف من المقعد|المخرج",
+    "nausea":"غثيان|لعبان نفس",
+    "hematemesis":"تقيؤ دموي",
+    "malena":"خروج اسود اللون",
+
+"peiranal/abdomen" : "=========================================",
+    "perianal pain":"الم المقعد",
+    "perianal discharge":"افرازات المقعد",
+    "perianal itching":"حكة شرجية",
+    "anal incontinence":"فقدان السيطرة على المقعد",
+    "abdominal wall swelling":"انتفاخ|تورم|في جدار البطن",
+
+"Neuro" : "=========================================",
+    "coma":"غيبوبة",
+    "tremer":"ارتجاف|رعشة",
+    "fit":"نوبة الصرع",
+    "abnormal movement":"حركات غريبة",
+    "spasm":"تشنجات",
+    "memory loss":"فقدان الذاكرة",
+    "confusion":"تشوش الوعي",
+    "numbness":"خدر",
+    "slurred speech":"صعوبة الكلام",
+    "ataxia":"ترنح|عد القدرة على الحكة بصورة منتظمة",
+    "weakness":"ضعف اثناء الحركة",
+    "other neurological problems":"مشاكل عصبية اخرى",
+    "syncope":"حالة اغماء",
+
+"Psycho" : "=========================================",
+    "cognitive impairment":"خلل في التعلم",
+    "behavioral impairement":"اضطراب السلوك",
+    "depression":"اكتئاب",
+    "hallucination/delusion":"اوهام",
+    "phobia":"الخوف(من الاشياء غير المخيفة)",
+    "suicide":"محاولة النتحار",
+    "obsession":"الهوس|الوسواس",
+    "attention deficit":"نقص النتباه",
+    "hyperactivity":"زيادة الحركة",
+    "stress":"الشد العصبي",
+    "psychological trauma":"ازمات نفسية",
+    "addiction":"الادمان",
+    "encorporesis":"التغوط اللاارادي عند الاطفال",
+    "polyphagia":"الشراهة",
+    "other psychological problems":"مشاكل نفسية الخرلى",
+
+
+"musckuloskeletal" : "=========================================",
+    "generalized bone pain":"الم العظام",
+    "joint pain":"الم المفاصل غير المسبوق باصابة",
+    "deformity":"تشوهات العظام والمفاصل",
+    "joint swelling":"تورم المفصل",
+    "limitation of movement":"تيبس المفصل",
+    "fracture":"كسر",
+    "limb pain":"الم في الاطراف",
+    "dislocation":"خلع المفاصل",
+    "other msk problems":"مشاكل العظام والمفاصل الاخرى",
+
+"head/neck/back" : "=========================================",
+    "jaw pain":"الم الفكين",
+    "neck pain":"الم الرقبة",
+    "enlarged jaw":"تضخم حجم الفكين",
+    "neck swelling":"تورم في الرقبة",
+    "back opening":"فتخة في الظهر",
+    "back mass":"تورم في الظهر",
+    "back pain":"الم الظهر",
+    "headache":"الصداع",
+    "large head":"كبر حجم الراس عند الاطفال",
+    "abnormal head shape":"عدم انتظام شكل الراس عند الاطفال",
+    "other skull problems":"مشاكل اخرى في الراس",
+
+"upperlimb" : "=========================================",
+    "left arm pain":"الم الذراع اليسرى",
+    "left shoulder pain":"الم الكتف الايسر",
+
+
+"hand" : "=========================================",
+    "enlarged hand":"تضخم في خجم اليد",
+    "extra digit":"زيادة ولادية في عدد الاصابع ",
+    "joined digit":"التساق ولادي في الاصابع",
+    "loss digit":"فقدان الاصابع الولادي",
+    "hand deformity":"تشوهات اليد",
+    "other hand problems":"مشاكل اخرى في اليد",
+    "hand swelling":"تورم اليد",
+    "hand lump":"النتفاخ|ورمة|في اليد",
+
+"lowerlimb" : "=========================================",
+    "bilateral leg edema":" تورم كلا القدمين والساقين",
+    "enlarged foot":"تضخم حجم القد",
+    "unilateral leg swelling":"تورم احد القدمين والساقين",
+    "unilateral leg pain" : "الم في احدى الساقين",
+    "leg pain during walking":"الم الساق اثناء الحركة والمشي",
+    "foot ulcer":"تقرحات في القدم",
+
+
+"others" : "=========================================",
+    "sweating":"التعرق الزائد",
+    "fever":"الحمى|السخونة",
+    "heat sensation":"الشعور بحرارة الجو اثناء البرد",
+    "ulcer":"تقرحات ",
+    "insomnia":"ارق|عدم القدرة على النوم",
+    "cold sensation":"الشعور ببرودة الجو اثناء الحر",
+    "somnolence":"الخمول|قلة النشاط",
+    "polydipsia":"العطش وكثرة شرب الماء",
+    "bleeding":"النزف التلقائي او عدم توقف النزف بعد الاصابة",
+    "fatigue":"التعب",
+    "pallor":"الشحوب|اصفرار الوجه",
+    "lump":"تورك|كتلة لحمية"
+    ,"other health problems":"مشاكل صحية اخرى",
+    "malaise":"النحول",
+    "short stature":"قصر القامة",
+    "taste loss":"فقدان التذوق",
+
+
+"bp/pr/lab" : "=========================================",
+
+
+"injuries/suicide/intoxication/burn" : "=========================================",
+    "FFH":"السقوط من مرتفع",
+    "RTA":"حادث سير",
+    "stab":"طعن",
+    "shot":"طلق ناري",
+    "other injuries":"اصابات اخرى",
+    "intoxication":"التسمم",
+    "burn":"الحرق",
+    "msk injury":"اصبات العظام و المفاصل",
+    "sport injury":"الاصابات الرياضية",
+
+
+"mouth" : "=========================================",
+    "mouth deviation":"انحراف الفم",
+    "cleft lip":"شق الشفة",
+    "cleft palate":"شق في سقف الفم",
+    "disease of the mouth":"مشاكل اخرى في الفم",
+
+
+"appetite" : "=========================================",
+    "weight gain":"ازدياد الوزن",
+    "weight loss":"فقدان الوزن",
+    "anorexia":"قلة الشهية",
+
+"throat" : "=========================================",
+    "hoarseness":"بحة الصوت",
+    "sore throat":"الم البلعوم",
+    "other ent problems":"مشاكل الانف|الاذن|الحنجرة الاخرى",
+
+
+"nose" : "=========================================",
+    "nasal discharge":"الرشح",
+    "nasal bleeding":"نزف الانف التلقائي",
+    "nasal obstruction":"انسداد الانف",
+    "nasal pain":"الم الانف",
+    "nasal mass":"زائدة لحمية في الانف",
+    "nasal deformity":"تشوهات الانف",
+    "sneezing":"العطس",
+    "nasal itching":"حكة انفية",
+    "anosmia":"فقدان الشم",
+    "enlarged nose":"تضخم حجم الانف",
+
+"ear" : "=========================================",
+    "deafness":"الصمم|فقدان السمع",
+    "vertigo":"الدوار",
+    "tinnitus":"الطنين",
+    "ear discharge":"خراج من الاذن",
+    "ear redness":"احمرار الاذن",
+    "ear pain":"الم الاذن",
+
+"dermatology" : "=========================================",
+    "dry skin":"جفاف البشرة",
+    "dry hair":"جفاف الشعر",
+    "skin rash":"طفح جلدي",
+    "hair problems":"مشاكل الشعر",
+    "skin redness":"احمرار الجلد",
+    "skin lesion":"مرض جلدي",
+    "skin appendage":"زائدة جلدية",
+    "skin itching":"حكة جلدية",
+    "acne":"حب الشباب",
+    "skin pigmentation":"تغير لون الجلد",
+    "other dermatological problems":"مشاكل جلدية اخرى",
+    "striae":"خطوط جلدية","nail problems":"مشاكل الاظافر",
+    "bruising":"بقع داكنة في الجلد",
+
+
+"gyne" : "=========================================",
+    "amenorrhea":"انقطاع الحيض",
+    "oligomenorrhea":"قلة الحيض",
+    "menorrhagia":"غزارة الحيض",
+    "female infertility":"العقم عند النساء",
+    "female hirsutism":"ظهور الشعر عند النساء",
+    "prolong pregnancy":"زيادة فترة الحمل",
+    "abnormal cycle":"الحيض غير المنتظم",
+    "abnormal vaginal bleeding":"نزف غير منتظم",
+    "vaginal discharge":"خراج مهبلي ",
+    "genital region mass":"زائدة لحمية في المنطقة الحساسة",
+    "pain during cycle":"الم اثناء الحيض",
+    "postmenopausal bleeding":"النزف بعد انقطاع الحيض",
+    "other gynecological and obstetrical problems":"مشاكل نسائية اخرى",
+    "miscarriage":"اسقاط الحمل",
+
+"uro/kidney" : "=========================================",
+    "incontinence":"السلس|عدم السيطرة على الادرار",
+    "polyuria":"كثرة كمية الادرار",
+    "abnormal urethral opening site":"فتحة التبول في غير مكتنها الطبيعي",
+    "suprapubic pain":"الم اسفل البطن في المنتصف",
+    "frequency":"كثرة الذهاب للادرار",
+    "flank pain":"الم الخصر",
+    "retention":"احتباس الادرار",
+    "urgency":"الاستعجال اثناء الاحتصار",
+    "dysuria":"الم اثناء الادرار",
+    "hematuria":"ادرار دموي",
+    "other urological problems":"مشاكل بولية اخرى",
+    "nocturia":"التبول الليلي",
+
+"male genital" : "=========================================",
+    "decrease libido":"قلة الشهوة الجنسية",
+    "delayed puberty":"تاخر البلوغ",
+    "male infertility":"العقم عند الرجال",
+    "scrotal swelling":"انتفاخ الخصية",
+    "empty scrotum":"الخصية الفارغة",
+    "abnormal penile size":"حجم العضو غير المنتظم",
+    "penile mass":"زاىدة لحمية",
+    "other penile problems":"مشاكل اخرى",
+    "scrotal pain":"الم الخصية",
+    "priapism":"الانتصاب اكثر من 6 ساعات",
+    "impotence":"عذم الانتصاب",
+    "hematospermia":"وجود الدم في السائل المنوي",
+
+"ophtha" : "=========================================",
+    "open eye":"عدم القدرة على غاق العين",
+    "blindness":"العمى",
+    "photophobia":"الخوف من الضوء",
+    "double vision":"الرؤيا المزدوجة",
+    "lid drop":"عدم القدرة على فتح العين",
+    "blurred vision":"تشوش الرؤيا",
+    "squint":"الحول",
+    "eye redness":"احمرار العين",
+    "eye pain":"الم العين",
+    "eye discharge":"خراج من العين",
+    "eye itching":"حكة في العين",
+    "eye pigmentation":"اصطباغ العين",
+    "periorbital edema":"تورم حول العين",
+    "eyelid deformity":"تشوهات الجفن",
+    "dry eye":"جفاف العين",
+    "ophthalmoplegia":"عدم القدرة على تحريك العين",
+    "other ophthalmological problems":"مشاكل اخرى في العين",
+    "jaundice":"اصفرار العين",
+
+"breast" : "=========================================",
+    "gynecomastia":"التثدي عن الرجال",
+    "galactorrhea":"الافراز غير الطبيعي للحليب",
+    "breast mass":"زائدة لحمية في الثدي",
+    "breast pain":"الم الثدي",
+    "breast discharge":"خراج من الثدي",
+    "breast lump":"تورم في الثدي",
+    "breast skin lesion":"مشاكل جلدية في الثدي",
+    "other breast problems":"مشاكل اخرى في الثدي"
+
 }
