--- a/lang/en.json
+++ b/lang/en.json
@@ -92,30 +92,17 @@
 
 
 "patient_page" : "=======================================",
-"male" : "Male",
-"female" : "Female",
-"age" : "Enter your age in Years",
-"snack_age" : "Please, Enter your Age",
-"patient_complain" : "Complains",
-"main_complain" : "The Main Complain",
-"other_complain" : "Do you have another Complain",
-"complain_area" : "Choose the area of your Complain",
-"choose_complain" : "Choose your Complain",
-"first_choose_complain" : "First choose your Complain ",
-"add_complains" : "Additional Complains",
-
-
-
-
-
-
-
-"symptoms" : "=========================================",
-
-
-
-
-
+    "male" : "Male",
+    "female" : "Female",
+    "age" : "Enter your age in Years",
+    "snack_age" : "Please, Enter your Age",
+    "patient_complain" : "Complains",
+    "main_complain" : "The Main Complain",
+    "other_complain" : "Do you have another Complain",
+    "complain_area" : "Choose the area of your Complain",
+    "choose_complain" : "Choose your Complain",
+    "first_choose_complain" : "First choose your Complain ",
+    "add_complains" : "Additional Complains",
 
 
 "chronic_diseases" : "=======================================",
@@ -133,5 +120,297 @@
     "cd_lung" : "Chronic Lung Disease",
     "cd_copd" : "COPD",
     "cd_ashma" : "Ashma",
-    "cd_tumor" : "Malignancy"
+    "cd_tumor" : "Malignancy",
+
+
+
+
+    "cardioresp" : "=========================================",
+    "hemoptysis":"hemoptysis",
+    "orthopnea":"orthopnea",
+    "PN dyspnea":"PN dyspnea",
+    "palpitation":"palpitation",
+    "chest pain":"chest pain",
+    "cough":"cough",
+    "sputum":"sputum",
+    "dyspnea":"dyspnea",
+    "cyanosis":"cyanosis",
+    "other cardiac problems":"other cardiac problems",
+    "wheeze":"wheeze",
+    "other respiratory problems":"other respiratory problems",
+
+ "GIT and abdomen" : "=========================================",
+    "abdominal pain":"abdominal pain",
+    "vomiting":"vomiting",
+    "constipation":"constipation",
+    "bloody diarrhea":"bloody diarrhea",
+    "watery diarrhea":"watery diarrhea",
+    "dysphagia":"dysphagia",
+    "odynophagia":"odynophagia",
+    "mucousy diarrhea":"mucousy diarrhea",
+    "tenesmus":"tenesmus",
+    "other git problems":"other git problems",
+    "abdominal distension":"abdominal distension",
+    "bleeding per rectum":"bleeding per rectum",
+    "nausea":"nausea",
+    "hematemesis":"hematemesis",
+    "malena":"malena",
+
+"peiranal/abdomen" : "=========================================",
+    "perianal pain":"perianal pain",
+    "perianal discharge":"perianal discharge",
+    "perianal itching":"perianal itching",
+    "anal incontinence":"anal incontinence",
+    "abdominal wall swelling":"abdominal wall swelling",
+
+"Neuro" : "=========================================",
+    "coma":"coma",
+    "tremer":"tremer",
+    "fit":"fit",
+    "abnormal movement":"abnormal movement",
+    "spasm":"spasm",
+    "memory loss":"memory loss",
+    "confusion":"confusion",
+    "numbness":"numbness",
+    "slurred speech":"slurred speech",
+    "ataxia":"ataxia",
+    "weakness":"weakness",
+    "other neurological problems":"other neurological problems",
+    "syncope":"syncope",
+
+"Psycho" : "=========================================",
+    "cognitive impairment":"cognitive impairment",
+    "behavioral impairement":"behavioral impairement",
+    "depression":"depression",
+    "hallucination/delusion":"hallucination/delusion",
+    "phobia":"phobia",
+    "suicide":"suicide",
+    "obsession":"obsession",
+    "attention deficit":"attention deficit",
+    "hyperactivity":"hyperactivity",
+    "stress":"stress",
+    "psychological trauma":"psychological trauma",
+    "addiction":"addiction",
+    "encorporesis":"encorporesis",
+    "polyphagia":"polyphagia",
+    "other psychological problems":"other psychological problems",
+
+
+"musckuloskeletal" : "=========================================",
+    "generalized bone pain":"generalized bone pain",
+    "joint pain":"joint pain",
+    "deformity":"deformity",
+    "joint swelling":"joint swelling",
+    "limitation of movement":"limitation of movement",
+    "fracture":"fracture",
+    "limb pain":"limb pain",
+    "dislocation":"dislocation",
+    "other msk problems":"other msk problems",
+
+"head/neck/back" : "=========================================",
+    "jaw pain":"jaw pain",
+    "neck pain":"neck pain",
+    "enlarged jaw":"enlarged jaw",
+    "neck swelling":"neck swelling",
+    "back opening":"back opening",
+    "back mass":"back mass",
+    "back pain":"back pain",
+    "headache":"headache",
+    "large head":"large head",
+    "abnormal head shape":"abnormal head shape",
+    "other skull problems":"other skull problems",
+
+"upperlimb" : "=========================================",
+    "left arm pain":"left arm pain",
+    "left shoulder pain":"left shoulder pain",
+
+
+"hand" : "=========================================",
+    "enlarged hand":"enlarged hand",
+    "extra digit":"extra digit",
+    "joined digit":"joined digit",
+    "loss digit":"loss digit",
+    "hand deformity":"hand deformity",
+    "other hand problems":"other hand problems",
+    "hand swelling":"hand swelling",
+    "hand lump":"hand lump",
+
+"lowerlimb" : "=========================================",
+    "bilateral leg edema":"bilateral leg edema",
+    "enlarged foot":"enlarged foot",
+    "unilateral leg swelling":"unilateral leg swelling",
+    "unilateral leg pain" : "unilateral leg pain",
+    "leg pain during walking":"leg pain during walking",
+    "foot ulcer":"foot ulcer",
+
+
+"others" : "=========================================",
+    "sweating":"sweating",
+    "fever":"fever",
+    "heat sensation":"heat sensation",
+    "ulcer":"ulcer",
+    "insomnia":"insomnia",
+    "cold sensation":"cold sensation",
+    "somnolence":"somnolence",
+    "polydipsia":"polydipsia",
+    "bleeding":"bleeding ",
+    "fatigue":"fatigue",
+    "pallor":"pallor",
+    "lump":"lump",
+    "other health problems":"other health problems",
+    "malaise":"malaise",
+    "short stature":"short stature",
+    "taste loss":"taste loss",
+
+
+"bp/pr/lab" : "=========================================",
+
+
+"injuries/suicide/intoxication/burn" : "=========================================",
+    "FFH":"FFH",
+    "RTA":"RTA",
+    "stab":"stab",
+    "shot":"shot",
+    "other injuries":"other injuries",
+    "intoxication":"intoxication",
+    "burn":"burn",
+    "msk injury":"msk injury",
+    "sport injury":"sport injury",
+
+
+"mouth" : "=========================================",
+    "mouth deviation":"mouth deviation",
+    "cleft lip":"cleft lip",
+    "cleft palate":"cleft palate",
+    "disease of the mouth":"disease of the mouth",
+
+
+"appetite" : "=========================================",
+    "weight gain":"weight gain",
+    "weight loss":"weight loss",
+    "anorexia":"anorexia",
+
+"throat" : "=========================================",
+    "hoarseness":"hoarseness",
+    "sore throat":"sore throat",
+    "other ent problems":"other ent problems",
+
+
+"nose" : "=========================================",
+    "nasal discharge":"nasal discharge",
+    "nasal bleeding":"nasal bleeding",
+    "nasal obstruction":"nasal obstruction",
+    "nasal pain":"nasal pain",
+    "nasal mass":"nasal mass",
+    "nasal deformity":"nasal deformity",
+    "sneezing":"sneezing",
+    "nasal itching":"nasal itching",
+    "anosmia":"anosmia",
+    "enlarged nose":"enlarged nose",
+
+"ear" : "=========================================",
+    "deafness":"deafness",
+    "vertigo":"vertigo",
+    "tinnitus":"tinnitus",
+    "ear discharge":"ear discharge",
+    "ear redness":"ear redness",
+    "ear pain":"ear pain",
+
+"dermatology" : "=========================================",
+    "dry skin":"dry skin",
+    "dry hair":"dry hair",
+    "skin rash":"skin rash",
+    "hair problems":"hair problems",
+    "skin redness":"skin redness",
+    "skin lesion":"skin lesion",
+    "skin appendage":"skin appendage",
+    "skin itching":"skin itching",
+    "acne":"acne",
+    "skin pigmentation":"skin pigmentation",
+    "other dermatological problems":"other dermatological problems",
+    "striae":"striae",
+    "nail problems":"nail problems",
+    "bruising":"bruising",
+
+
+"gyne" : "=========================================",
+    "amenorrhea":"amenorrhea",
+    "oligomenorrhea":"oligomenorrhea",
+    "menorrhagia":"menorrhagia",
+    "female infertility":"female infertility",
+    "female hirsutism":"female hirsutism",
+    "prolong pregnancy":"prolong pregnancy",
+    "abnormal cycle":"abnormal cycle",
+    "abnormal vaginal bleeding":"abnormal vaginal bleeding",
+    "vaginal discharge":"vaginal discharge",
+    "genital region mass":"genital region mass",
+    "pain during cycle":"pain during cycle",
+    "postmenopausal bleeding":"postmenopausal bleeding",
+    "other gynecological and obstetrical problems":"other gynecological and obstetrical problems",
+    "miscarriage":"miscarriage",
+
+"uro/kidney" : "=========================================",
+    "incontinence":"incontinence",
+    "polyuria":"polyuria",
+    "abnormal urethral opening site":"abnormal urethral opening site",
+    "suprapubic pain":"suprapubic pain",
+    "frequency":"frequency",
+    "flank pain":"flank pain",
+    "retention":"retention",
+    "urgency":"urgency",
+    "dysuria":"dysuria",
+    "hematuria":"hematuria",
+    "other urological problems":"other urological problems",
+    "nocturia":"nocturia",
+
+"male genital" : "=========================================",
+    "decrease libido":"decrease libido",
+    "delayed puberty":"delayed puberty",
+    "male infertility":"male infertility",
+    "scrotal swelling":"scrotal swelling",
+    "empty scrotum":"empty scrotum",
+    "abnormal penile size":"abnormal penile size",
+    "penile mass":"penile mass",
+    "other penile problems":"other penile problems",
+    "scrotal pain":"scrotal pain",
+    "priapism":"priapism",
+    "impotence":"impotence",
+    "hematospermia":"hematospermia",
+
+"ophtha" : "=========================================",
+    "open eye":"open eye",
+    "blindness":"blindness",
+    "photophobia":"photophobia",
+    "double vision":"double vision",
+    "lid drop":"lid drop",
+    "blurred vision":"blurred vision",
+    "squint":"squint",
+    "eye redness":"eye redness",
+    "eye pain":"eye pain",
+    "eye discharge":"eye discharge",
+    "eye itching":"eye itching",
+    "eye pigmentation":"eye pigmentation",
+    "periorbital edema":"periorbital edema",
+    "eyelid deformity":"eyelid deformity",
+    "dry eye":"dry eye",
+    "ophthalmoplegia":"ophthalmoplegia",
+    "other ophthalmological problems":"other ophthalmological problems",
+    "jaundice":"jaundice",
+
+"breast" : "=========================================",
+    "gynecomastia":"gynecomastia",
+    "galactorrhea":"galactorrhea",
+    "breast mass":"breast mass",
+    "breast pain":"breast pain",
+    "breast discharge":"breast discharge",
+    "breast lump":"breast lump",
+    "breast skin lesion":"breast skin lesion",
+    "other breast problems":"other breast problems"
+
+
+
+
+
+
+
 }
