localization 5th batch

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -104,22 +104,63 @@
     "first_choose_complain" : "اولا اختر المنطقه",
     "add_complains" : "الاعراض الاخرى",
 
+
+"body_regions" : "=======================================",
+"heart_lung" : "القلب والرئتين",
+"git" : "الجهاز الهضمي",
+"brain_neuron" : "الدماغ والاعصاب",
+"perianal_abdomen" : "Perianal & Abdominal Wall",
+"skeleton_muscles" : "الهيكل العظمي والعضلات",
+"head_neck_back" : "الرأس, الرقبه, الظهر",
+"psychology" : "الحاله النفسيه",
+"upper_limb" : "الطرف العلوي",
+"lower_limb" : "الطرف السفلي",
+"Hand" : "اليدين",
+"other_symptoms" : "اعراض اخرى",
+"bpPrLab" : "الفعاليات الحيويه والتحاليل المختبريه",
+"injuriesSuicideIntoxicationBurn" : "الاصابات, التسمم, الحروق, الانتحار",
+"mouth" :"الفم",
+"appetite" : "مشاكل الشهيه",
+"throat" : "الحنجره",
+"nose" : "الانف",
+"ear" : "الاذن",
+"skin" : "مشاكل الجلد",
+"gynecology" : "نسائيه وتوليد",
+"uro" : "المجاري البوليه",
+"male_genital" : "مشاكل المجرى التناسلي الذكري",
+"eye" : "مشاكل العين",
+"Breast" : "مشاكل الثدي",
+
+
+
+
 "chronic_diseases" : "=======================================",
-    "cd_HTN" : "Elevated Blood Pressure",
-    "cd_DM" : "Diabetus Mellitus",
-    "cd_heart" : "Chronic Heart Disease",
-    "cd_heartFailure" : "Heart Failure",
-    "cd_ctd" : "Connective tissue disease",
-    "cd_ckd" : "Kidney Diseae",
-    "cd_liver" : "Liver Disease",
-    "cd_intestine" : "Chronic Intestinal Disease",
-    "cd_epilepsy" : "Epilespy",
-    "cd_cva" : "Stroke",
-    "cd_thyroid" : "Previous Goitre",
+    "chronic_disease" : "الامراض المزمنه",
+    "choose_one_more" : "اختر واحد او اكثر",
+    "cd_HTN" : "ارتفاع الضغط المزمن",
+    "cd_DM" : "مرض السكري",
+    "cd_heart" : "امراض القلب المزمنه",
+    "cd_heartFailure" : "فشل القلب",
+    "cd_ctd" : "مرض النسيج الضام",
+    "cd_ckd" : "امراض الكلى",
+    "cd_liver" : "امراض الكبد",
+    "cd_intestine" : "امراص الجهاز الهضمي المزمنه",
+    "cd_epilepsy" : "مرض الصرع",
+    "cd_cva" : "الجلطه القلبيه",
+    "cd_thyroid" : "تضخم الغدة الدرقية السابق",
     "cd_lung" : "Chronic Lung Disease",
-    "cd_copd" : "COPD",
-    "cd_ashma" : "Ashma",
-    "cd_tumor" : "Malignancy",
+    "cd_copd" : " مرض الرئة الانسدادي المزمن",
+    "cd_ashma" : "مرض الربو",
+    "cd_tumor" : "الاورام",
+
+"life_style" : "نمط الحياه",
+    "obesity" : "السمنه",
+    "physical_inactive" : "الخمول البدني",
+    "pregnancy" : "الحمل",
+    "alcohol" : "إدمان الكحول",
+    "smoking" : "التدخين",
+    "family" : "سوابق عائلية قوية للإصابة بنفس المرض",
+    
    
 "cardioresp" : "=========================================",
     "hemoptysis":"بلغم دموي",
@@ -274,25 +315,25 @@
     "sport injury":"الاصابات الرياضية",
 
 
-"mouth" : "=========================================",
+"mouth_region" : "=========================================",
     "mouth deviation":"انحراف الفم",
     "cleft lip":"شق الشفة",
     "cleft palate":"شق في سقف الفم",
     "disease of the mouth":"مشاكل اخرى في الفم",
 
 
-"appetite" : "=========================================",
+"appetite_regions" : "=========================================",
     "weight gain":"ازدياد الوزن",
     "weight loss":"فقدان الوزن",
     "anorexia":"قلة الشهية",
 
-"throat" : "=========================================",
+"throat_" : "=========================================",
     "hoarseness":"بحة الصوت",
     "sore throat":"الم البلعوم",
     "other ent problems":"مشاكل الانف|الاذن|الحنجرة الاخرى",
 
 
-"nose" : "=========================================",
+"nose_" : "=========================================",
     "nasal discharge":"الرشح",
     "nasal bleeding":"نزف الانف التلقائي",
     "nasal obstruction":"انسداد الانف",
@@ -304,7 +345,7 @@
     "anosmia":"فقدان الشم",
     "enlarged nose":"تضخم حجم الانف",
 
-"ear" : "=========================================",
+"ear_" : "=========================================",
     "deafness":"الصمم|فقدان السمع",
     "vertigo":"الدوار",
     "tinnitus":"الطنين",
