localization 5th branch

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -16,6 +16,8 @@
     "snack_connectivity" : "لا يوجد اتصال بالشبكه",
     "snack_register" : "خطا في التسجيل اضف معلومات صحيحه اولا",
     "snack_map" : "حدد مكان عيادتك اولا",
+    "snack_map_patient" : "رجاء حدد موقعك اولا",
+
 
 
 "doctor_page" : "=======================================",
@@ -103,6 +105,24 @@
     "choose_complain" : "اختر الاعراض",
     "first_choose_complain" : "اولا اختر المنطقه",
     "add_complains" : "الاعراض الاخرى",
+    "result_speciality" : "الاعراض التي تعاني منها تتفق مع الاختصاص الطبي",
+    "get_location" : "لاستمرار يجب تحديد موقعك من خلال احدى الخيارين",
+    "auto_location" : "تحديد موقع الجهاز الحالي",
+    "speciality_result" : "الاختصاص الطبي",
+    "your_location" : "حدد موقعك",
+    "region" : "الموقع الجغرافي",
+    "select_region" : "حدد موقعك",
+    "northen_region" : "المنطقه الشماليه في العراق",
+    "southern_region" : "المنطقه الجنوبيه في العراق",
+    "centeral_region" : "المنطقه الوسطى في العراق",
+    "western_region" : "المنطقه الغربيه في العراق",
+    "patient_map_title" : "حدد موقعك في الخريطه",
+
+
+
+
+
+
 
 
 "body_regions" : "=======================================",
