update clinic translation

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -21,6 +21,21 @@
     "Middle Region":"المنطقة الوسطى في العراق",
 
 
+"email verification page":"=========================",
+    "email_v_title":"تاكيد البريد الالكتروني", 
+    "email_sent":"تم ارسال البريد الى ",
+    "confirm":"تحقق من بريدك الالكتروني ثم اضغط على رابط التاكيد وبعدها ",
+    "continue":"استمرار",
+    "didnot receive":" لم يتم استلام البريد؟ لطفا انتظر لبضعة دقائق ثم اضغط",
+    "resend":" اعادة ارسال البريد",
+
+
+"patient result":"================================",
+    "resulted":"نتيجة البحث",
+    "distances":"البعد عن الطبيب هو تقريبا",
+    "km":"كيلومتر",
+    "doctor_locat":"اظهار موقع الطبيب",
+
 
 "Snacks" : "=======================================",
     "snack_sign_in" : "خطا في الدخول",
@@ -77,6 +92,13 @@
     "finish_update" : "اكمل تحديث معلوماتك بال",
     "change_password" : "هل تريد تغيير الرقم السري؟",
     "change" : "تغيير",
+    "vacation":" عطلة العيادة في يوم",
+    "detailed_address":"عنوان العيادة كاملا",
+    "address_validator":"الرجاء ادخال عنوان مناسب",
+    "vacation_days":"ايام عطلة العيادة",
+    "vacation_validator":"لطفا حدد ايام عطلة العيادة",
+    "work_hour":"اوقات عمل العيادة",
+    "work_validator":"حدد اوقات عمل العيادة لطفا",
     
 
 
