--- a/lang/en.json
+++ b/lang/en.json
@@ -21,6 +21,22 @@
     "Middle Region":"Middle Region of Iraq",
 
 
+"email verification page":"=========================",
+    "email_v_title":"Email Confirmation", 
+    "email_sent":"We Sent an Email to: ",
+    "confirm":"Check your email and click on the confirmation link then",
+    "continue":"Continue",
+    "didnot receive":"Didn't receive email ? Please wait for few minutes then press ",
+    "resend":"Resend Email",
+    
+    
+"patient result":"================================",
+    "resulted":"Search Result",
+    "distances":"Distance to the doctor is about ",
+    "km":"Km away",
+    "doctor_locat":"Show Doctor Location",
+
+
 "Snacks" : "=======================================",
     "snack_sign_in" : "Error Signing in",
     "snack_connectivity" : "No Internet Connection",
@@ -76,6 +92,13 @@
     "finish_update" : "Finish Updating your Information by ",
     "change_password" : "Change Your Password?",
     "change" : "Change",
+    "vacation":"Clinic vacation is in ",
+    "detailed_address":"Detailed clinic address",
+    "address_validator":"Please enter a valid address",
+    "vacation_days":"Clinic vacation days",
+    "vacation_validator":"Select valid vacation days",
+    "work_hour":"Clinic working hours",
+    "work_validator":"Please enter valid working hours",
     
 
 
