forget password translation

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -42,7 +42,7 @@
     "snack_connectivity" : "لا يوجد اتصال بالشبكه",
     "snack_register" : "خطا في التسجيل اضف معلومات صحيحه اولا",
     "snack_map" : "حدد موقع عيادتك اولا",
-    "snack_map_patient" : "رجاء حدد موقعك اولا",
+    "snack_map_patient" : "لطفا حدد موقعك اولا",
     "age_message":"حدد عمرك لطفا",
     "age_message_error":"يجب ان يكون العمر بين 0 و 130 عام",
     "gender_message":"حدد الجنس لطفا",
@@ -59,14 +59,14 @@
     "about_us" : "من نحن",
     "sign_in": "الدخول",
     "register" : "التسجيل",
-    "email": "الايميل",
-    "enter_your_email" : "ادخل الايميل الشخصي",
-    "password" : "الرمز السري",
-    "enter_your_password" : "ادخل الرمز السري",
-    "password_validator" : "الرمز السري يجب ان يكون اكثر من 8 رموز",
-    "forget_password" : "نسيت الرمز السري؟",
+    "email": "البريد الالكتروني",
+    "enter_your_email" : "ادخل بريدك الالكتروني",
+    "password" : "كلمة المرور",
+    "enter_your_password" : "ادخل كلمة المرور",
+    "password_validator" : "كلمة المرور يجب ان تكون اكثر من 8 رموز",
+    "forget_password" : "نسيت كلمة المرور؟",
     "does_not_have_account" : "لم تسجل في التطبيق سابقا؟",
-    "does_have_account" : "لديك حساب سابقا؟",
+    "does_have_account" : "لديك حساب سابق؟",
     "doctor_form" : "معلومات الطبيب",
     "name" : "الاسم",
     "name_validator" : "ادخل اسمك الثلاثي",
@@ -83,14 +83,14 @@
     "profile" : "الملف الشخصي",
     "update_info" : "تحديث المعلومات",
     "update_password" : "تحديث الرقم السري",
-    "current_password" : "ادخل الرقم السري الحالي",
-    "old_password" : "الرقم السري القديم",
-    "new_password" : "الرقم السري الجديد",
-    "new_password_hint" : "ادخل الرقم السري الجديد",
-    "valid_password" : "رجاء ادخل الرقم السري المعرف",
-    "invalid_password" : "الرقم السري غير معرف",
+    "current_password" : "ادخل كلمة المرور الحالية",
+    "old_password" : "كلمة المرور القديمة",
+    "new_password" : "كلمة المرور الجديدة",
+    "new_password_hint" : "ادخل كلمة المرور الجديدة",
+    "valid_password" : "رجاء ادخل كلمة المرور المعرفة",
+    "invalid_password" : "كلمة المرور غير معرفة",
     "finish_update" : "اكمل تحديث معلوماتك بال",
-    "change_password" : "هل تريد تغيير الرقم السري؟",
+    "change_password" : "هل تريد تغيير كلمة المرور؟",
     "change" : "تغيير",
     "vacation":" عطلة العيادة في يوم",
     "detailed_address":"عنوان العيادة كاملا",
@@ -100,6 +100,9 @@
     "work_hour":"اوقات عمل العيادة",
     "work_validator":"حدد اوقات عمل العيادة لطفا",
     "update_location": "تحديث موقع عيادتك",
+    "passWord_reset":"اعادة تعيين كلمة المرور",
+    "password_reset_email":"ارسال بريد الكتروني لاعادة التعيين",
+    "check_reset_email":"تحقق من بريدك الالكتروني ثم اضغط على الرابط المرسل لاعادة تعيين كلمة المرور",
     
 
 
