--- a/lang/en.json
+++ b/lang/en.json
@@ -100,6 +100,9 @@
     "work_hour":"Clinic working hours",
     "work_validator":"Please enter valid working hours",
     "update_location": "Update Your Location",
+    "passWord_reset":"Password Reset",
+    "password_reset_email":"Send Email To Reset Password",
+    "check_reset_email":"Check your Email and click on the link to Reset your Password",
     
 
 
